--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
             --hidden-import yt_dlp `
             --hidden-import curl_cffi `
             --hidden-import Crypto `
+            --hidden-import selenium `
             --add-data "gereksinimler.json;." `
             compiled.py
 
@@ -120,6 +121,7 @@ jobs:
             --hidden-import yt_dlp \
             --hidden-import curl_cffi \
             --hidden-import Crypto \
+            --hidden-import selenium \
             --add-data "gereksinimler.json:." \
             compiled.py
 
