--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "turkanime-gui"
-version = "9.4.3.1"
+version = "9.4.9.0"
 description = "Türkanime video oynatıcı ve indirici"
 authors = ["barkeser2002 <bariskeser@bariskeser.com>", "Junicchi <junicchi@waifu.club>"]
 readme = "README.md"
@@ -43,8 +43,10 @@ easygui = ">=0.98.2"
 # PyQt6 = { version = ">=6.5", optional = true }
 customtkinter = { version = ">=5.2.0", optional = true }
 
+selenium = { version = ">=4.11.0", optional = true }
+
 [tool.poetry.extras]
-gui = ["customtkinter"]
+gui = ["customtkinter", "selenium"]
 
 [tool.poetry.group.dev.dependencies]
 toml = "*"
